# **************************************************************************
AC_INIT(materials/Makefile.am)

# **************************************************************************
# Miscellaneous options and initializations.

AM_INIT_AUTOMAKE(data, 1.0.0)

# File to cram results from the configure tests into.
AM_CONFIG_HEADER(config.h)

# Turn off default maintainer make-rules -- use ./autogen.sh instead.
AM_MAINTAINER_MODE

# **************************************************************************
# Search and set up necessary stuff to use the GUI library.

# Environment variables to configure the generic sourcefiles.

sim_ac_libconfigvars=${srcdir}/../libconfigvars.sh
if test -f ${sim_ac_libconfigvars}; then
  . ${sim_ac_libconfigvars}
fi

AC_SUBST(GUI)
AC_SUBST(lGUI)
AC_SUBST(uGUI)

# **************************************************************************
# All files configure must automatically generate.

AC_OUTPUT([
	Makefile
	bin/Makefile
	bin/iv2h.sh
	materials/Makefile
	materials/materials.h
	materials/artdeco/Makefile
	materials/artdeco/artdeco.h
	materials/autumn/Makefile
	materials/autumn/autumn.h
	materials/glass/Makefile
	materials/glass/glass.h
	materials/metal/Makefile
	materials/metal/metal.h
	materials/neon/Makefile
	materials/neon/neon.h
	materials/rococo/Makefile
	materials/rococo/rococo.h
	materials/santafe/Makefile
	materials/santafe/santafe.h
	materials/sheen/Makefile
	materials/sheen/sheen.h
	materials/silky/Makefile
	materials/silky/silky.h
	materials/spring/Makefile
	materials/spring/spring.h
	materials/summer/Makefile
	materials/summer/summer.h
	materials/tropical/Makefile
	materials/tropical/tropical.h
	materials/winter/Makefile
	materials/winter/winter.h
], [
	chmod a+x bin/iv2h.sh
])

# **************************************************************************
