# **************************************************************************
# data/configure.in

AC_INIT(materials/Makefile.am)
AC_CONFIG_AUX_DIR(cfg)

# **************************************************************************
# Miscellaneous options and initializations.

AM_INIT_AUTOMAKE(data, 1.0.0)

# File to cram results from the configure tests into.
AM_CONFIG_HEADER(config.h)

# Turn off default maintainer make-rules -- use ./bootstrap instead.
AM_MAINTAINER_MODE

# **************************************************************************
# Search and set up necessary stuff to use the GUI library.

sim_ac_configcmd=../so*-config
if test -f $sim_ac_configcmd; then
  GUI=`$sim_ac_configcmd --ac-subst GUI`
  Gui=`$sim_ac_configcmd --ac-subst Gui`
  gui=`$sim_ac_configcmd --ac-subst gui`
else
  AC_MSG_ERROR([found no so*-config command in ..])
fi

AC_SUBST(GUI)
AC_SUBST(Gui)
AC_SUBST(gui)

# **************************************************************************
# All files configure must automatically generate.

AC_OUTPUT([
	Makefile
	bin/Makefile
	materials/Makefile
	materials/artdeco/Makefile
	materials/autumn/Makefile
	materials/glass/Makefile
	materials/metal/Makefile
	materials/neon/Makefile
	materials/rococo/Makefile
	materials/santafe/Makefile
	materials/sheen/Makefile
	materials/silky/Makefile
	materials/spring/Makefile
	materials/summer/Makefile
	materials/tropical/Makefile
	materials/winter/Makefile
])

