############################################################################
## SoXt/data/materials/Makefile.am
## $Id$

SUBDIRS = \
	artdeco \
	autumn \
	glass \
	metal \
	neon \
	rococo \
	santafe \
	sheen \
	silky \
	spring \
	summer \
	tropical \
	winter

############################################################################

