############################################################################
## So@GUI@/data/materials/artdeco/Makefile.am

BUILT_SOURCES = \
	artdeco_0.h artdeco_1.h artdeco_2.h artdeco_3.h artdeco_4.h \
	artdeco_5.h artdeco_6.h artdeco_7.h artdeco_8.h artdeco_9.h \
	artdeco_10.h artdeco_11.h artdeco_12.h artdeco_13.h artdeco_14.h \
	artdeco_15.h artdeco_16.h artdeco_17.h artdeco_18.h artdeco_19.h \
	artdeco_20.h artdeco_21.h artdeco_22.h artdeco_23.h artdeco_24.h \
	artdeco_25.h artdeco_26.h artdeco_27.h artdeco_28.h artdeco_29.h \
	artdeco_30.h artdeco_31.h artdeco_32.h artdeco_33.h artdeco_34.h

noinst_HEADERS = $(BUILT_SOURCES)

materialdir = $(datadir)/Coin/materials/artdeco
material_DATA = \
	artdeco.0 artdeco.1 artdeco.2 artdeco.3 artdeco.4 \
	artdeco.5 artdeco.6 artdeco.7 artdeco.8 artdeco.9 \
	artdeco.10 artdeco.11 artdeco.12 artdeco.13 artdeco.14 \
	artdeco.15 artdeco.16 artdeco.17 artdeco.18 artdeco.19 \
	artdeco.20 artdeco.21 artdeco.22 artdeco.23 artdeco.24 \
	artdeco.25 artdeco.26 artdeco.27 artdeco.28 artdeco.29 \
	artdeco.30 artdeco.31 artdeco.32 artdeco.33 artdeco.34

############################################################################

artdeco_0.h: \
  $(top_srcdir)/materials/artdeco/artdeco.0 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

artdeco_1.h: \
  $(top_srcdir)/materials/artdeco/artdeco.1 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

artdeco_2.h: \
  $(top_srcdir)/materials/artdeco/artdeco.2 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

artdeco_3.h: \
  $(top_srcdir)/materials/artdeco/artdeco.3 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

artdeco_4.h: \
  $(top_srcdir)/materials/artdeco/artdeco.4 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

artdeco_5.h: \
  $(top_srcdir)/materials/artdeco/artdeco.5 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

artdeco_6.h: \
  $(top_srcdir)/materials/artdeco/artdeco.6 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

artdeco_7.h: \
  $(top_srcdir)/materials/artdeco/artdeco.7 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

artdeco_8.h: \
  $(top_srcdir)/materials/artdeco/artdeco.8 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

artdeco_9.h: \
  $(top_srcdir)/materials/artdeco/artdeco.9 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

artdeco_10.h: \
  $(top_srcdir)/materials/artdeco/artdeco.10 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

artdeco_11.h: \
  $(top_srcdir)/materials/artdeco/artdeco.11 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

artdeco_12.h: \
  $(top_srcdir)/materials/artdeco/artdeco.12 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

artdeco_13.h: \
  $(top_srcdir)/materials/artdeco/artdeco.13 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

artdeco_14.h: \
  $(top_srcdir)/materials/artdeco/artdeco.14 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

artdeco_15.h: \
  $(top_srcdir)/materials/artdeco/artdeco.15 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

artdeco_16.h: \
  $(top_srcdir)/materials/artdeco/artdeco.16 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

artdeco_17.h: \
  $(top_srcdir)/materials/artdeco/artdeco.17 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

artdeco_18.h: \
  $(top_srcdir)/materials/artdeco/artdeco.18 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

artdeco_19.h: \
  $(top_srcdir)/materials/artdeco/artdeco.19 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

artdeco_20.h: \
  $(top_srcdir)/materials/artdeco/artdeco.20 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

artdeco_21.h: \
  $(top_srcdir)/materials/artdeco/artdeco.21 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

artdeco_22.h: \
  $(top_srcdir)/materials/artdeco/artdeco.22 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

artdeco_23.h: \
  $(top_srcdir)/materials/artdeco/artdeco.23 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

artdeco_24.h: \
  $(top_srcdir)/materials/artdeco/artdeco.24 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

artdeco_25.h: \
  $(top_srcdir)/materials/artdeco/artdeco.25 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

artdeco_26.h: \
  $(top_srcdir)/materials/artdeco/artdeco.26 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

artdeco_27.h: \
  $(top_srcdir)/materials/artdeco/artdeco.27 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

artdeco_28.h: \
  $(top_srcdir)/materials/artdeco/artdeco.28 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

artdeco_29.h: \
  $(top_srcdir)/materials/artdeco/artdeco.29 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

artdeco_30.h: \
  $(top_srcdir)/materials/artdeco/artdeco.30 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

artdeco_31.h: \
  $(top_srcdir)/materials/artdeco/artdeco.31 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

artdeco_32.h: \
  $(top_srcdir)/materials/artdeco/artdeco.32 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

artdeco_33.h: \
  $(top_srcdir)/materials/artdeco/artdeco.33 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

artdeco_34.h: \
  $(top_srcdir)/materials/artdeco/artdeco.34 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

############################################################################
