############################################################################
## So@GUI@/data/materials/autumn/Makefile.am

BUILT_SOURCES = \
	autumn0.h autumn1.h autumn2.h autumn3.h autumn4.h \
	autumn5.h autumn6.h autumn7.h autumn8.h autumn9.h \
	autumn10.h autumn11.h autumn12.h autumn13.h autumn14.h \
	autumn15.h autumn16.h autumn17.h autumn18.h autumn19.h \
	autumn20.h autumn21.h autumn22.h autumn23.h autumn24.h \
	autumn25.h autumn26.h autumn27.h autumn28.h autumn29.h \
	autumn30.h autumn31.h autumn32.h autumn33.h autumn34.h

############################################################################

autumn0.h: $(top_srcdir)/data/materials/autumn/autumn.0
	$(top_srcdir)/data/materials/bin/iv2h.sh $^ > $@

autumn1.h: $(top_srcdir)/data/materials/autumn/autumn.1
	$(top_srcdir)/data/materials/bin/iv2h.sh $^ > $@

autumn2.h: $(top_srcdir)/data/materials/autumn/autumn.2
	$(top_srcdir)/data/materials/bin/iv2h.sh $^ > $@

autumn3.h: $(top_srcdir)/data/materials/autumn/autumn.3
	$(top_srcdir)/data/materials/bin/iv2h.sh $^ > $@

autumn4.h: $(top_srcdir)/data/materials/autumn/autumn.4
	$(top_srcdir)/data/materials/bin/iv2h.sh $^ > $@

autumn5.h: $(top_srcdir)/data/materials/autumn/autumn.5
	$(top_srcdir)/data/materials/bin/iv2h.sh $^ > $@

autumn6.h: $(top_srcdir)/data/materials/autumn/autumn.6
	$(top_srcdir)/data/materials/bin/iv2h.sh $^ > $@

autumn7.h: $(top_srcdir)/data/materials/autumn/autumn.7
	$(top_srcdir)/data/materials/bin/iv2h.sh $^ > $@

autumn8.h: $(top_srcdir)/data/materials/autumn/autumn.8
	$(top_srcdir)/data/materials/bin/iv2h.sh $^ > $@

autumn9.h: $(top_srcdir)/data/materials/autumn/autumn.9
	$(top_srcdir)/data/materials/bin/iv2h.sh $^ > $@

autumn10.h: $(top_srcdir)/data/materials/autumn/autumn.10
	$(top_srcdir)/data/materials/bin/iv2h.sh $^ > $@

autumn11.h: $(top_srcdir)/data/materials/autumn/autumn.11
	$(top_srcdir)/data/materials/bin/iv2h.sh $^ > $@

autumn12.h: $(top_srcdir)/data/materials/autumn/autumn.12
	$(top_srcdir)/data/materials/bin/iv2h.sh $^ > $@

autumn13.h: $(top_srcdir)/data/materials/autumn/autumn.13
	$(top_srcdir)/data/materials/bin/iv2h.sh $^ > $@

autumn14.h: $(top_srcdir)/data/materials/autumn/autumn.14
	$(top_srcdir)/data/materials/bin/iv2h.sh $^ > $@

autumn15.h: $(top_srcdir)/data/materials/autumn/autumn.15
	$(top_srcdir)/data/materials/bin/iv2h.sh $^ > $@

autumn16.h: $(top_srcdir)/data/materials/autumn/autumn.16
	$(top_srcdir)/data/materials/bin/iv2h.sh $^ > $@

autumn17.h: $(top_srcdir)/data/materials/autumn/autumn.17
	$(top_srcdir)/data/materials/bin/iv2h.sh $^ > $@

autumn18.h: $(top_srcdir)/data/materials/autumn/autumn.18
	$(top_srcdir)/data/materials/bin/iv2h.sh $^ > $@

autumn19.h: $(top_srcdir)/data/materials/autumn/autumn.19
	$(top_srcdir)/data/materials/bin/iv2h.sh $^ > $@

autumn20.h: $(top_srcdir)/data/materials/autumn/autumn.20
	$(top_srcdir)/data/materials/bin/iv2h.sh $^ > $@

autumn21.h: $(top_srcdir)/data/materials/autumn/autumn.21
	$(top_srcdir)/data/materials/bin/iv2h.sh $^ > $@

autumn22.h: $(top_srcdir)/data/materials/autumn/autumn.22
	$(top_srcdir)/data/materials/bin/iv2h.sh $^ > $@

autumn23.h: $(top_srcdir)/data/materials/autumn/autumn.23
	$(top_srcdir)/data/materials/bin/iv2h.sh $^ > $@

autumn24.h: $(top_srcdir)/data/materials/autumn/autumn.24
	$(top_srcdir)/data/materials/bin/iv2h.sh $^ > $@

autumn25.h: $(top_srcdir)/data/materials/autumn/autumn.25
	$(top_srcdir)/data/materials/bin/iv2h.sh $^ > $@

autumn26.h: $(top_srcdir)/data/materials/autumn/autumn.26
	$(top_srcdir)/data/materials/bin/iv2h.sh $^ > $@

autumn27.h: $(top_srcdir)/data/materials/autumn/autumn.27
	$(top_srcdir)/data/materials/bin/iv2h.sh $^ > $@

autumn28.h: $(top_srcdir)/data/materials/autumn/autumn.28
	$(top_srcdir)/data/materials/bin/iv2h.sh $^ > $@

autumn29.h: $(top_srcdir)/data/materials/autumn/autumn.29
	$(top_srcdir)/data/materials/bin/iv2h.sh $^ > $@

autumn30.h: $(top_srcdir)/data/materials/autumn/autumn.30
	$(top_srcdir)/data/materials/bin/iv2h.sh $^ > $@

autumn31.h: $(top_srcdir)/data/materials/autumn/autumn.31
	$(top_srcdir)/data/materials/bin/iv2h.sh $^ > $@

autumn32.h: $(top_srcdir)/data/materials/autumn/autumn.32
	$(top_srcdir)/data/materials/bin/iv2h.sh $^ > $@

autumn33.h: $(top_srcdir)/data/materials/autumn/autumn.33
	$(top_srcdir)/data/materials/bin/iv2h.sh $^ > $@

autumn34.h: $(top_srcdir)/data/materials/autumn/autumn.34
	$(top_srcdir)/data/materials/bin/iv2h.sh $^ > $@

############################################################################
