############################################################################
## So@GUI@/data/materials/autumn/Makefile.am
## $Id$

materialdir = $(datadir)/Coin/materials/autumn
material_DATA = \
	autumn.0 autumn.1 autumn.2 autumn.3 autumn.4 \
	autumn.5 autumn.6 autumn.7 autumn.8 autumn.9 \
	autumn.10 autumn.11 autumn.12 autumn.13 autumn.14 \
	autumn.15 autumn.16 autumn.17 autumn.18 autumn.19 \
	autumn.20 autumn.21 autumn.22 autumn.23 autumn.24 \
	autumn.25 autumn.26 autumn.27 autumn.28 autumn.29 \
	autumn.30 autumn.31 autumn.32 autumn.33 autumn.34

BUILT_SOURCES = \
	autumn.h \
	autumn_0.h autumn_1.h autumn_2.h autumn_3.h autumn_4.h \
	autumn_5.h autumn_6.h autumn_7.h autumn_8.h autumn_9.h \
	autumn_10.h autumn_11.h autumn_12.h autumn_13.h autumn_14.h \
	autumn_15.h autumn_16.h autumn_17.h autumn_18.h autumn_19.h \
	autumn_20.h autumn_21.h autumn_22.h autumn_23.h autumn_24.h \
	autumn_25.h autumn_26.h autumn_27.h autumn_28.h autumn_29.h \
	autumn_30.h autumn_31.h autumn_32.h autumn_33.h autumn_34.h

noinst_HEADERS = $(BUILT_SOURCES)

############################################################################

autumn.h: $(top_srcdir)/materials/autumn/autumn.h.in
	@( cd $(top_builddir); $(MAKE) built-sources )

autumn_0.h: \
  $(top_srcdir)/materials/autumn/autumn.0 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/autumn/autumn.0 \
	  > $@

autumn_1.h: \
  $(top_srcdir)/materials/autumn/autumn.1 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/autumn/autumn.1 \
	  > $@

autumn_2.h: \
  $(top_srcdir)/materials/autumn/autumn.2 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/autumn/autumn.2 \
	  > $@

autumn_3.h: \
  $(top_srcdir)/materials/autumn/autumn.3 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/autumn/autumn.3 \
	  > $@

autumn_4.h: \
  $(top_srcdir)/materials/autumn/autumn.4 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/autumn/autumn.4 \
	  > $@

autumn_5.h: \
  $(top_srcdir)/materials/autumn/autumn.5 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/autumn/autumn.5 \
	  > $@

autumn_6.h: \
  $(top_srcdir)/materials/autumn/autumn.6 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/autumn/autumn.6 \
	  > $@

autumn_7.h: \
  $(top_srcdir)/materials/autumn/autumn.7 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/autumn/autumn.7 \
	  > $@

autumn_8.h: \
  $(top_srcdir)/materials/autumn/autumn.8 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/autumn/autumn.8 \
	  > $@

autumn_9.h: \
  $(top_srcdir)/materials/autumn/autumn.9 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/autumn/autumn.9 \
	  > $@

autumn_10.h: \
  $(top_srcdir)/materials/autumn/autumn.10 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/autumn/autumn.10 \
	  > $@

autumn_11.h: \
  $(top_srcdir)/materials/autumn/autumn.11 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/autumn/autumn.11 \
	  > $@

autumn_12.h: \
  $(top_srcdir)/materials/autumn/autumn.12 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/autumn/autumn.12 \
	  > $@

autumn_13.h: \
  $(top_srcdir)/materials/autumn/autumn.13 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/autumn/autumn.13 \
	  > $@

autumn_14.h: \
  $(top_srcdir)/materials/autumn/autumn.14 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/autumn/autumn.14 \
	  > $@

autumn_15.h: \
  $(top_srcdir)/materials/autumn/autumn.15 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/autumn/autumn.15 \
	  > $@

autumn_16.h: \
  $(top_srcdir)/materials/autumn/autumn.16 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/autumn/autumn.16 \
	  > $@

autumn_17.h: \
  $(top_srcdir)/materials/autumn/autumn.17 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/autumn/autumn.17 \
	  > $@

autumn_18.h: \
  $(top_srcdir)/materials/autumn/autumn.18 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/autumn/autumn.18 \
	  > $@

autumn_19.h: \
  $(top_srcdir)/materials/autumn/autumn.19 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/autumn/autumn.19 \
	  > $@

autumn_20.h: \
  $(top_srcdir)/materials/autumn/autumn.20 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/autumn/autumn.20 \
	  > $@

autumn_21.h: \
  $(top_srcdir)/materials/autumn/autumn.21 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/autumn/autumn.21 \
	  > $@

autumn_22.h: \
  $(top_srcdir)/materials/autumn/autumn.22 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/autumn/autumn.22 \
	  > $@

autumn_23.h: \
  $(top_srcdir)/materials/autumn/autumn.23 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/autumn/autumn.23 \
	  > $@

autumn_24.h: \
  $(top_srcdir)/materials/autumn/autumn.24 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/autumn/autumn.24 \
	  > $@

autumn_25.h: \
  $(top_srcdir)/materials/autumn/autumn.25 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/autumn/autumn.25 \
	  > $@

autumn_26.h: \
  $(top_srcdir)/materials/autumn/autumn.26 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/autumn/autumn.26 \
	  > $@

autumn_27.h: \
  $(top_srcdir)/materials/autumn/autumn.27 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/autumn/autumn.27 \
	  > $@

autumn_28.h: \
  $(top_srcdir)/materials/autumn/autumn.28 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/autumn/autumn.28 \
	  > $@

autumn_29.h: \
  $(top_srcdir)/materials/autumn/autumn.29 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/autumn/autumn.29 \
	  > $@

autumn_30.h: \
  $(top_srcdir)/materials/autumn/autumn.30 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/autumn/autumn.30 \
	  > $@

autumn_31.h: \
  $(top_srcdir)/materials/autumn/autumn.31 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/autumn/autumn.31 \
	  > $@

autumn_32.h: \
  $(top_srcdir)/materials/autumn/autumn.32 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/autumn/autumn.32 \
	  > $@

autumn_33.h: \
  $(top_srcdir)/materials/autumn/autumn.33 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/autumn/autumn.33 \
	  > $@

autumn_34.h: \
  $(top_srcdir)/materials/autumn/autumn.34 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/autumn/autumn.34 \
	  > $@

############################################################################
