############################################################################
## So@GUI@/glass/materials/glass/Makefile.am

BUILT_SOURCES = \
	glass_0.h glass_1.h glass_2.h glass_3.h glass_4.h \
	glass_5.h glass_6.h glass_7.h glass_8.h glass_9.h \
	glass_10.h glass_11.h glass_12.h glass_13.h glass_14.h \
	glass_15.h glass_16.h glass_17.h glass_18.h glass_19.h \
	glass_20.h glass_21.h glass_22.h glass_23.h glass_24.h \
	glass_25.h glass_26.h glass_27.h glass_28.h glass_29.h \
	glass_30.h glass_31.h glass_32.h glass_33.h glass_34.h

noinst_DATA = $(BUILT_SOURCES)

############################################################################

glass_0.h: $(top_srcdir)/materials/glass/glass.0
	$(top_builddir)/bin/iv2h.sh $^ > $@

glass_1.h: $(top_srcdir)/materials/glass/glass.1
	$(top_builddir)/bin/iv2h.sh $^ > $@

glass_2.h: $(top_srcdir)/materials/glass/glass.2
	$(top_builddir)/bin/iv2h.sh $^ > $@

glass_3.h: $(top_srcdir)/materials/glass/glass.3
	$(top_builddir)/bin/iv2h.sh $^ > $@

glass_4.h: $(top_srcdir)/materials/glass/glass.4
	$(top_builddir)/bin/iv2h.sh $^ > $@

glass_5.h: $(top_srcdir)/materials/glass/glass.5
	$(top_builddir)/bin/iv2h.sh $^ > $@

glass_6.h: $(top_srcdir)/materials/glass/glass.6
	$(top_builddir)/bin/iv2h.sh $^ > $@

glass_7.h: $(top_srcdir)/materials/glass/glass.7
	$(top_builddir)/bin/iv2h.sh $^ > $@

glass_8.h: $(top_srcdir)/materials/glass/glass.8
	$(top_builddir)/bin/iv2h.sh $^ > $@

glass_9.h: $(top_srcdir)/materials/glass/glass.9
	$(top_builddir)/bin/iv2h.sh $^ > $@

glass_10.h: $(top_srcdir)/materials/glass/glass.10
	$(top_builddir)/bin/iv2h.sh $^ > $@

glass_11.h: $(top_srcdir)/materials/glass/glass.11
	$(top_builddir)/bin/iv2h.sh $^ > $@

glass_12.h: $(top_srcdir)/materials/glass/glass.12
	$(top_builddir)/bin/iv2h.sh $^ > $@

glass_13.h: $(top_srcdir)/materials/glass/glass.13
	$(top_builddir)/bin/iv2h.sh $^ > $@

glass_14.h: $(top_srcdir)/materials/glass/glass.14
	$(top_builddir)/bin/iv2h.sh $^ > $@

glass_15.h: $(top_srcdir)/materials/glass/glass.15
	$(top_builddir)/bin/iv2h.sh $^ > $@

glass_16.h: $(top_srcdir)/materials/glass/glass.16
	$(top_builddir)/bin/iv2h.sh $^ > $@

glass_17.h: $(top_srcdir)/materials/glass/glass.17
	$(top_builddir)/bin/iv2h.sh $^ > $@

glass_18.h: $(top_srcdir)/materials/glass/glass.18
	$(top_builddir)/bin/iv2h.sh $^ > $@

glass_19.h: $(top_srcdir)/materials/glass/glass.19
	$(top_builddir)/bin/iv2h.sh $^ > $@

glass_20.h: $(top_srcdir)/materials/glass/glass.20
	$(top_builddir)/bin/iv2h.sh $^ > $@

glass_21.h: $(top_srcdir)/materials/glass/glass.21
	$(top_builddir)/bin/iv2h.sh $^ > $@

glass_22.h: $(top_srcdir)/materials/glass/glass.22
	$(top_builddir)/bin/iv2h.sh $^ > $@

glass_23.h: $(top_srcdir)/materials/glass/glass.23
	$(top_builddir)/bin/iv2h.sh $^ > $@

glass_24.h: $(top_srcdir)/materials/glass/glass.24
	$(top_builddir)/bin/iv2h.sh $^ > $@

glass_25.h: $(top_srcdir)/materials/glass/glass.25
	$(top_builddir)/bin/iv2h.sh $^ > $@

glass_26.h: $(top_srcdir)/materials/glass/glass.26
	$(top_builddir)/bin/iv2h.sh $^ > $@

glass_27.h: $(top_srcdir)/materials/glass/glass.27
	$(top_builddir)/bin/iv2h.sh $^ > $@

glass_28.h: $(top_srcdir)/materials/glass/glass.28
	$(top_builddir)/bin/iv2h.sh $^ > $@

glass_29.h: $(top_srcdir)/materials/glass/glass.29
	$(top_builddir)/bin/iv2h.sh $^ > $@

glass_30.h: $(top_srcdir)/materials/glass/glass.30
	$(top_builddir)/bin/iv2h.sh $^ > $@

glass_31.h: $(top_srcdir)/materials/glass/glass.31
	$(top_builddir)/bin/iv2h.sh $^ > $@

glass_32.h: $(top_srcdir)/materials/glass/glass.32
	$(top_builddir)/bin/iv2h.sh $^ > $@

glass_33.h: $(top_srcdir)/materials/glass/glass.33
	$(top_builddir)/bin/iv2h.sh $^ > $@

glass_34.h: $(top_srcdir)/materials/glass/glass.34
	$(top_builddir)/bin/iv2h.sh $^ > $@

############################################################################
