############################################################################
## So@GUI@/glass/materials/glass/Makefile.am
## $Id$

materialdir = $(datadir)/Coin/materials/glass
material_DATA = \
	glass.0 glass.1 glass.2 glass.3 glass.4 \
	glass.5 glass.6 glass.7 glass.8 glass.9 \
	glass.10 glass.11 glass.12 glass.13 glass.14 \
	glass.15 glass.16 glass.17 glass.18 glass.19 \
	glass.20 glass.21 glass.22 glass.23 glass.24 \
	glass.25 glass.26 glass.27 glass.28 glass.29 \
	glass.30 glass.31 glass.32 glass.33 glass.34

BUILT_SOURCES = \
	glass.h \
	glass_0.h glass_1.h glass_2.h glass_3.h glass_4.h \
	glass_5.h glass_6.h glass_7.h glass_8.h glass_9.h \
	glass_10.h glass_11.h glass_12.h glass_13.h glass_14.h \
	glass_15.h glass_16.h glass_17.h glass_18.h glass_19.h \
	glass_20.h glass_21.h glass_22.h glass_23.h glass_24.h \
	glass_25.h glass_26.h glass_27.h glass_28.h glass_29.h \
	glass_30.h glass_31.h glass_32.h glass_33.h glass_34.h

noinst_DATA = $(BUILT_SOURCES)

############################################################################

glass.h: $(top_srcdir)/materials/glass/glass.h.in
	@( cd $(top_builddir); $(MAKE) built-sources )

glass_0.h: \
  $(top_srcdir)/materials/glass/glass.0 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/glass/glass.0 > $@

glass_1.h: \
  $(top_srcdir)/materials/glass/glass.1 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/glass/glass.1 > $@

glass_2.h: \
  $(top_srcdir)/materials/glass/glass.2 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/glass/glass.2 > $@

glass_3.h: \
  $(top_srcdir)/materials/glass/glass.3 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/glass/glass.3 > $@

glass_4.h: \
  $(top_srcdir)/materials/glass/glass.4 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/glass/glass.4 > $@

glass_5.h: \
  $(top_srcdir)/materials/glass/glass.5 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/glass/glass.5 > $@

glass_6.h: \
  $(top_srcdir)/materials/glass/glass.6 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/glass/glass.6 > $@

glass_7.h: \
  $(top_srcdir)/materials/glass/glass.7 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/glass/glass.7 > $@

glass_8.h: \
  $(top_srcdir)/materials/glass/glass.8 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/glass/glass.8 > $@

glass_9.h: \
  $(top_srcdir)/materials/glass/glass.9 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/glass/glass.9 > $@

glass_10.h: \
  $(top_srcdir)/materials/glass/glass.10 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/glass/glass.10 > $@

glass_11.h: \
  $(top_srcdir)/materials/glass/glass.11 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/glass/glass.11 > $@

glass_12.h: \
  $(top_srcdir)/materials/glass/glass.12 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/glass/glass.12 > $@

glass_13.h: \
  $(top_srcdir)/materials/glass/glass.13 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/glass/glass.13 > $@

glass_14.h: \
  $(top_srcdir)/materials/glass/glass.14 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/glass/glass.14 > $@

glass_15.h: \
  $(top_srcdir)/materials/glass/glass.15 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/glass/glass.15 > $@

glass_16.h: \
  $(top_srcdir)/materials/glass/glass.16 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/glass/glass.16 > $@

glass_17.h: \
  $(top_srcdir)/materials/glass/glass.17 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/glass/glass.17 > $@

glass_18.h: \
  $(top_srcdir)/materials/glass/glass.18 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/glass/glass.18 > $@

glass_19.h: \
  $(top_srcdir)/materials/glass/glass.19 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/glass/glass.19 > $@

glass_20.h: \
  $(top_srcdir)/materials/glass/glass.20 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/glass/glass.20 > $@

glass_21.h: \
  $(top_srcdir)/materials/glass/glass.21 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/glass/glass.21 > $@

glass_22.h: \
  $(top_srcdir)/materials/glass/glass.22 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/glass/glass.22 > $@

glass_23.h: \
  $(top_srcdir)/materials/glass/glass.23 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/glass/glass.23 > $@

glass_24.h: \
  $(top_srcdir)/materials/glass/glass.24 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/glass/glass.24 > $@

glass_25.h: \
  $(top_srcdir)/materials/glass/glass.25 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/glass/glass.25 > $@

glass_26.h: \
  $(top_srcdir)/materials/glass/glass.26 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/glass/glass.26 > $@

glass_27.h: \
  $(top_srcdir)/materials/glass/glass.27 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/glass/glass.27 > $@

glass_28.h: \
  $(top_srcdir)/materials/glass/glass.28 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/glass/glass.28 > $@

glass_29.h: \
  $(top_srcdir)/materials/glass/glass.29 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/glass/glass.29 > $@

glass_30.h: \
  $(top_srcdir)/materials/glass/glass.30 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/glass/glass.30 > $@

glass_31.h: \
  $(top_srcdir)/materials/glass/glass.31 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/glass/glass.31 > $@

glass_32.h: \
  $(top_srcdir)/materials/glass/glass.32 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/glass/glass.32 > $@

glass_33.h: \
  $(top_srcdir)/materials/glass/glass.33 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/glass/glass.33 > $@

glass_34.h: \
  $(top_srcdir)/materials/glass/glass.34 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/glass/glass.34 > $@

############################################################################
