############################################################################
## So@GUI@/data/materials/metal/Makefile.am
## $Id$

materialdir = $(datadir)/Coin/materials/metal
material_DATA = \
	metal.0 metal.1 metal.2 metal.3 metal.4 \
	metal.5 metal.6 metal.7 metal.8 metal.9 \
	metal.10 metal.11 metal.12 metal.13 metal.14 \
	metal.15 metal.16 metal.17 metal.18 metal.19 \
	metal.20 metal.21 metal.22 metal.23 metal.24 \
	metal.25 metal.26 metal.27 metal.28 metal.29 \
	metal.30 metal.31 metal.32 metal.33 metal.34

BUILT_SOURCES = \
	metal.h \
	metal_0.h metal_1.h metal_2.h metal_3.h metal_4.h \
	metal_5.h metal_6.h metal_7.h metal_8.h metal_9.h \
	metal_10.h metal_11.h metal_12.h metal_13.h metal_14.h \
	metal_15.h metal_16.h metal_17.h metal_18.h metal_19.h \
	metal_20.h metal_21.h metal_22.h metal_23.h metal_24.h \
	metal_25.h metal_26.h metal_27.h metal_28.h metal_29.h \
	metal_30.h metal_31.h metal_32.h metal_33.h metal_34.h

noinst_DATA = $(BUILT_SOURCES)

############################################################################

metal.h: $(top_srcdir)/materials/metal/metal.h.in
	@( cd $(top_builddir); $(MAKE) built-sources )

metal_0.h: \
  $(top_srcdir)/materials/metal/metal.0 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/metal/metal.0 > $@

metal_1.h: \
  $(top_srcdir)/materials/metal/metal.1 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/metal/metal.1 > $@

metal_2.h: \
  $(top_srcdir)/materials/metal/metal.2 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/metal/metal.2 > $@

metal_3.h: \
  $(top_srcdir)/materials/metal/metal.3 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/metal/metal.3 > $@

metal_4.h: \
  $(top_srcdir)/materials/metal/metal.4 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/metal/metal.4 > $@

metal_5.h: \
  $(top_srcdir)/materials/metal/metal.5 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/metal/metal.5 > $@

metal_6.h: \
  $(top_srcdir)/materials/metal/metal.6 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/metal/metal.6 > $@

metal_7.h: \
  $(top_srcdir)/materials/metal/metal.7 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/metal/metal.7 > $@

metal_8.h: \
  $(top_srcdir)/materials/metal/metal.8 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/metal/metal.8 > $@

metal_9.h: \
  $(top_srcdir)/materials/metal/metal.9 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/metal/metal.9 > $@

metal_10.h: \
  $(top_srcdir)/materials/metal/metal.10 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/metal/metal.10 > $@

metal_11.h: \
  $(top_srcdir)/materials/metal/metal.11 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/metal/metal.11 > $@

metal_12.h: \
  $(top_srcdir)/materials/metal/metal.12 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/metal/metal.12 > $@

metal_13.h: \
  $(top_srcdir)/materials/metal/metal.13 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/metal/metal.13 > $@

metal_14.h: \
  $(top_srcdir)/materials/metal/metal.14 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/metal/metal.14 > $@

metal_15.h: \
  $(top_srcdir)/materials/metal/metal.15 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/metal/metal.15 > $@

metal_16.h: \
  $(top_srcdir)/materials/metal/metal.16 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/metal/metal.16 > $@

metal_17.h: \
  $(top_srcdir)/materials/metal/metal.17 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/metal/metal.17 > $@

metal_18.h: \
  $(top_srcdir)/materials/metal/metal.18 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/metal/metal.18 > $@

metal_19.h: \
  $(top_srcdir)/materials/metal/metal.19 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/metal/metal.19 > $@

metal_20.h: \
  $(top_srcdir)/materials/metal/metal.20 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/metal/metal.20 > $@

metal_21.h: \
  $(top_srcdir)/materials/metal/metal.21 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/metal/metal.21 > $@

metal_22.h: \
  $(top_srcdir)/materials/metal/metal.22 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/metal/metal.22 > $@

metal_23.h: \
  $(top_srcdir)/materials/metal/metal.23 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/metal/metal.23 > $@

metal_24.h: \
  $(top_srcdir)/materials/metal/metal.24 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/metal/metal.24 > $@

metal_25.h: \
  $(top_srcdir)/materials/metal/metal.25 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/metal/metal.25 > $@

metal_26.h: \
  $(top_srcdir)/materials/metal/metal.26 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/metal/metal.26 > $@

metal_27.h: \
  $(top_srcdir)/materials/metal/metal.27 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/metal/metal.27 > $@

metal_28.h: \
  $(top_srcdir)/materials/metal/metal.28 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/metal/metal.28 > $@

metal_29.h: \
  $(top_srcdir)/materials/metal/metal.29 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/metal/metal.29 > $@

metal_30.h: \
  $(top_srcdir)/materials/metal/metal.30 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/metal/metal.30 > $@

metal_31.h: \
  $(top_srcdir)/materials/metal/metal.31 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/metal/metal.31 > $@

metal_32.h: \
  $(top_srcdir)/materials/metal/metal.32 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/metal/metal.32 > $@

metal_33.h: \
  $(top_srcdir)/materials/metal/metal.33 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/metal/metal.33 > $@

metal_34.h: \
  $(top_srcdir)/materials/metal/metal.34 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/metal/metal.34 > $@

############################################################################
